--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev:pwa": "quasar dev -m pwa",
     "dev:android": "quasar dev -m capacitor -T android",
     "build": "quasar build",
-    "build:pwa": "quasar build -m pwa"
+    "build:pwa": "quasar build -m pwa",
+    "deploy": "vercel"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
